--- a/templates/layout.html.erb
+++ b/templates/layout.html.erb
@@ -20,17 +20,12 @@
 <div class="container">
   <div class="bs-docs-section clearfix">
     <div class="row">
-      <div class="col-lg-12">
+      <div class="card">
 
         <div class="bs-component">
           <div class="navbar navbar-default">
             <div class="navbar-header">
-              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <a class="navbar-brand" href="#">Rspec Reports</a>
+              <a class="navbar-brand" href="index.html">Rspec Requirements</a>
             </div>
           </div>
         </div>
@@ -45,7 +40,7 @@
   </div>
 
   <div class="row">
-    <div class="col-lg-12">
+    <div class="card">
       <%= @body %>
     </div>
   </div>
