Output arbitary file

--- a/templates/index.html.erb
+++ b/templates/index.html.erb
@@ -48,7 +48,7 @@
         </thead>
         <tbody>
           <% i = 1 %>
-          <% @top_groups.each do |group_name, group| %>
+          <% top_groups.each do |group_name, group| %>
             <tr>
               <td><%= i %></td>
               <td>
