Fix html design miss

--- a/templates/layout.html.erb
+++ b/templates/layout.html.erb
@@ -33,16 +33,12 @@
     </div>
   </div>
 
-  <div class="row">
-    <div class="col-lg-12">
-      <p class="text-center" style="font-size:2em;"><%= @title %></p>
-    </div>
+  <div>
+    <p class="text-center" style="font-size:2em;"><%= @title %></p>
   </div>
 
-  <div class="row">
-    <div class="card">
-      <%= @body %>
-    </div>
+  <div class="card">
+    <%= @body %>
   </div>
 </div>
 </body>
