Simplize directory first level

--- a/templates/index.html.erb
+++ b/templates/index.html.erb
@@ -52,7 +52,7 @@
             <tr>
               <td><%= i %></td>
               <td>
-                <a href="<%= group_name %>.html"><%= group.description %></a>
+                <a href="example_groups/<%= group_name %>.html"><%= group.description %></a>
               </td>
             </tr>
             <% i+= 1%>
