--- a/templates/layout.html.erb
+++ b/templates/layout.html.erb
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Rspec HTML Reports - <%= @title %></title>
 
-  <link href="assets/bootstrap-4.1.2.min.css" rel="stylesheet">
+  <link href="../assets/bootstrap-4.1.2.min.css" rel="stylesheet">
 
-  <script src="assets/jquery-3.3.1.min.js"></script>
-  <script src="assets/bootstrap-4.1.2.min.js"></script>
+  <script src="../assets/jquery-3.3.1.min.js"></script>
+  <script src="../assets/bootstrap-4.1.2.min.js"></script>
   <style>
     * {
       font-size: 14px;
@@ -25,7 +25,7 @@
         <div class="bs-component">
           <div class="navbar navbar-default">
             <div class="navbar-header">
-              <a class="navbar-brand" href="index.html">Rspec Requirements</a>
+              <a class="navbar-brand" href="../index.html">Rspec Requirements</a>
             </div>
           </div>
         </div>
